# Fortis_KPI

./: .gitignore
KPI/: KPI_Priority_List.txt
KPI/TE02_001/: detail.txt  joint_tracking.ipynb  kpi_tracking_data.ipynb  status_monitor.ipynb
KPI/TE02_002/: details.txt  real_time_latency.ipynb
KPI/TE02_003/: details.txt
KPI/TE02_004/: TE02_004_statusjoy_report_draft.docx  details.txt  te02_004_command_accuracy_validation.ipynb  te02_004_live_command_accuracy_validation.ipynb  te02_004_live_command_to_motion_validation.ipynb  te02_004_statusjoy_raw_samples.csv  te02_004_statusjoy_stable_states.csv  te02_004_statusjoy_transition_validation.ipynb
KPI/TE02_005/: details.txt  raw_data_to_ros_sensors.ipynb
KPI/TE02_005/teo2_005_validator_ros1/: CMakeLists.txt  README.md  package.xml
KPI/TE02_005/teo2_005_validator_ros1/config/: sensors.yaml
KPI/TE02_005/teo2_005_validator_ros1/launch/: validator.launch
KPI/TE02_005/teo2_005_validator_ros1/scripts/: conversion_validator.py  rosbag_play_validate.sh
KPI/TE02_006/: arm_latency_log.csv  details.txt  real_time_latency.cpp  real_time_latency.ipynb
KPI/TE02_007/: TE02_007_can_abstraction_report_draft.docx  details.txt  te02_007_can_abstraction_validation.ipynb  te02_007_raw_joint_states.csv  te02_007_raw_joints.csv  te02_007_summary.csv
KPI/TE02_008/: details.txt
KPI/TE02_017/kpi_017_logger/: CMakeLists.txt  README.md  package.xml
KPI/TE02_017/kpi_017_logger/config/: kpi_017.yaml
KPI/TE02_017/kpi_017_logger/launch/: kpi_017.launch
KPI/TE02_017/kpi_017_logger/scripts/: kpi_017_logger.py
(+100 files in other folders)
