<?xml version="1.0"?>
<package format="2">
  <name>teo2_005_validator_ros1</name>
  <version>0.1.0</version>
  <description>TEO2-005 KPI conversion validator (ROS1 Noetic)</description>
  <maintainer email="maintainer@example.com">TEO Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>